# smart-price-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: train.csv
src/price_app/: app.py  model.py
src/price_app/templates/: index.html  predict.html  result.html  upload.html
src/smart_price_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
