[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-price-optimizer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.0",
  "jinja2>=3.1.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "python-dotenv>=1.0",
  "joblib>=1.4.0"
  # "gunicorn>=22.0.0"  # opzionale per deploy
]

[tool.setuptools.packages.find]
where = ["src"]
