[build-system]
requires = ["setuptools>=69", "wheel", "build>=1.2.1"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-price-optimizer"
version = "0.1.0"
description = "Flask + ML app for dynamic price estimation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luca Pisani" }]
dependencies = [
  "flask>=3.0.0",
  "jinja2>=3.1.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "python-dotenv>=1.0",
  "gunicorn>=22.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.10",
  "ipykernel>=6.29"
]

[tool.setuptools.packages.find]
where = ["src"] 

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B"]
ignore = ["E203","W503"]
